--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,10 +20,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:importantForAccessibility="no"
-            app:srcCompat="@drawable/ic_store"
+            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/cost_of_service"
-            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"/>
+            app:srcCompat="@drawable/ic_store" />
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -32,8 +31,8 @@
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:hint="@string/cost_of_service"
             android:layout_marginTop="7dp"
+            android:hint="@string/cost_of_service"
             app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -47,16 +46,15 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-
         <ImageView
             android:id="@+id/icon_service_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:importantForAccessibility="no"
-            app:srcCompat="@drawable/ic_service"
+            app:layout_constraintBottom_toBottomOf="@id/service_question"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/service_question"
-            app:layout_constraintBottom_toBottomOf="@id/service_question"/>
+            app:srcCompat="@drawable/ic_service" />
 
 
         <TextView
@@ -64,9 +62,9 @@
             style="@style/Widget.TippyTop.TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/how_was_the_service"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
+            android:text="@string/how_was_the_service"
             app:layout_constraintStart_toEndOf="@id/icon_service_question"
             app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />
 
@@ -74,9 +72,9 @@
             android:id="@+id/tip_options"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:checkedButton="@id/option_twenty_percent"
             android:orientation="vertical"
-            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@id/service_question"
             app:layout_constraintTop_toBottomOf="@id/service_question">
 
@@ -106,11 +104,10 @@
             android:id="@+id/icon_round_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_round_up"
+            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/round_up_switch"
-            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"/>
-
+            app:srcCompat="@drawable/ic_round_up" />
 
 
         <com.google.android.material.switchmaterial.SwitchMaterial
@@ -118,10 +115,10 @@
             style="@style/Widget.TippyTop.CompoundButton.Switch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
             android:text="@string/round_up_tip"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="16dp"
             app:layout_constraintStart_toEndOf="@id/icon_round_up"
             app:layout_constraintTop_toBottomOf="@id/tip_options" />
 
@@ -129,10 +126,10 @@
             android:id="@+id/calculate_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
             android:text="@string/calculate"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@id/round_up_switch"
             app:layout_constraintTop_toBottomOf="@id/round_up_switch" />
 
@@ -141,11 +138,11 @@
             style="@style/Widget.TippyTop.TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Tip Amount: $ 10 "
             android:layout_marginTop="10dp"
+            android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/calculate_button"
-            android:textSize="30dp"/>
+            tools:text="Tip Amount: $ 10 " />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
